# goopy

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
examples/: examples.py
goopy/: BaseGoogleServiceAPI.py  DriveServiceAPI.py  SheetsServiceAPI.py  SlidesServiceAPI.py  __init__.py
src/: BaseGoogleServiceAPI.py  DriveServiceAPI.py  SheetServiceAPI.py  SlidesServiceApi.py
