[project]
name = "goopy"
version = "0.1.0"
description = "Google API Tools for Python - A simple wrapper for Google Drive, Sheets, and Slides APIs"
readme = "README.md"
authors = [
    {name = "MoHai", email = "mohai3737@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["google", "drive", "sheets", "slides", "api"]
requires-python = ">=3.7"
dependencies = [
    "google",
    "google-api-python-client",
    "polars",
]

[project.urls]
"Homepage" = "https://github.com/mo-hai/goopy"
"Bug Tracker" = "https://github.com/mo-hai/goopy/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
